# blenderauto

./: .gitignore  README.md  pyproject.toml
data/objects/: all_objects.blend  cube.mtl  octogon.mtl
examples/: camera_live_action.py  exp0.py  exp1.py  multi_form.py  multiple_objects.py  pacman.py  single_object.py
src/blenderauto/: __init__.py
src/blenderauto/utils/: action.py  animation.py  bnw.py  scene.py
